# LearnArken

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  README.zh-CN.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
demo/: streamlit_app.py
deploy/: DEPLOY-GUIDE.zh.md  runbook.md
deploy/trigger/: index.html  logic.py  main.py  requirements.txt  tokens.example.json
deploy/vm/: idle_watchdog.py  provision.sh  run_demo_vm.sh  status_shim.py
docs/: AI-COLLABORATION.md  EVIDENCE.md  constitution.md  execution-plan.md  learning-guide.md  local-services.md  project-design.md  redteam.md  visual-map.md
docs/adr/: 0001-day4b-gate-stays-shut.md  0002-minimal-graph-query-slice.md  0003-day13-rust-gate.md
docs/architecture/: 01-file-inventory.md  02-system-architecture.md  03-config-and-services.md  04-tech-selection.md  05-api-and-demo.md  README.md
docs/diagrams/: architecture-flow.mmd  concept-classification.mmd  learning-domain-map.mmd  learning-roadmap.mmd
docs/discussions/: day1.md  day10.md  day11-13-planning.md  day11.md  day12.md  day13.md  day2.md  day3.md  day4.md  day5.md  day6.md  day7.md  day8.md  day9.md
docs/gemini-deepresearch/: REVIEW.md  day1-S1000D 技术出版物调研.md  day10-AI Demo 部署与展示.md  day11-KG-RAG 深度调研.md  day12-多模态 RAG 技术调研.md  day13a-LLM Inference Search Research.md  day13b-Python性能与并发调研.md  day2-S1000D XML校验技术调研.md  day3-信息检索深度调研.md  day4-混合检索系统架构调研.md  day5-RAG System Deep Research.md  day6-AI应用工程化深度调研.md  day7-AI Agent Auto Remediation Research.md  day8-RAG对抗评估深度调研.md  day9-AI Verifiable Repo Research.md
docs/handoff/: day11.md  day12.md  day13.md  day4.md  day5.md  day6.md  day7.md  day8.md  day9.md
docs/journal/: _template.md  day1.md  day10.md  day11.md  day12.md  day13.md  day2.md  day3.md  day4.md  day5.md  day6.md  day7.md  day8.md  day9.md
docs/notes/: day11-neighbor-noise.md  day12-figure-noise.md  day12-hallucination-boundary.md  day13-numba-decision.md  day4-dense-bakeoff.md  day4-embedding-length-bias.md  day4-failure-cases.md  day8-defects.md
docs/research/: README.md  day10-unknowns.md  day11-unknowns.md  day12-unknowns.md  day13-unknowns.md  day4-report.md  day4-unknowns.md  day5-unknowns.md  day6-unknowns.md  day7-unknowns.md  day8-unknowns.md  day9-unknowns.md
docs/reviews/: _template.md  day1.md  day10.md  day11.md  (+10 more)
samples/: README.md
tests/: test_adjudication_fixes.py  test_chunking.py  test_cli_day2.py  test_day10_deploy.py  test_day11_entity_link.py  test_day11_golden.py  test_day11_graph_expand.py  test_day12_multimodal.py  test_day13_perf.py  test_day13_tot.py  test_day4_closeout.py  test_day4_integration.py  test_day4_retrieval.py  test_day5_answer.py  test_day5_integration.py  test_day6_api.py  test_day6_stream.py  test_day7_repair.py  test_day7_sandbox.py  test_day8_adversarial.py  test_day9_evidence.py  test_inspect.py  test_retrieval.py  test_validation.py
tools/: adversarial_eval.py  answer_sample_eval.py  day11_ablation.py  day11_refusal_gate.py  day12_eval.py  day12_resolution.py  day13_async_bench.py  day13_mp_bench.py  day13_profile.py  day13_tot_eval.py  deep_research.py  demo_preflight.py  dense_bakeoff.py  gen_benchmark_tables.py  gen_figures.py  measure_refusal_threshold.py  probe_length_bias.py  run_demo.sh
(+171 files in other folders)
