[project]
name = "learnarken"
version = "0.2.0"
description = "Standards-aware technical-publication intelligence platform for aviation (S1000D), built AI-first"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Yi Xin" }]
# Upper bounds + uv.lock (CI installs with --locked): parser behavior must not
# drift under unlocked installs (red-team adjudication 2026-07-14, #13).
dependencies = [
    "defusedxml>=0.7,<1",
    "langchain-classic>=1.0.8,<2",
    "langchain-community>=0.4.2,<0.5",
    "langchain-core>=1.4.9,<2",
    "langchain-huggingface>=1.2.2,<2",
    "langchain-text-splitters>=1.1.2,<2",
    "lxml>=6.1.1,<7",
    "pydantic>=2.13.4,<3",
    "rank-bm25>=0.2.2,<0.3",
    "requests>=2.32,<3",
    "sentence-transformers>=5.6.0,<6",
]

[project.scripts]
learnarken = "learnarken.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/learnarken"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
